# frankenstein

./: README.md  analyseJob.sh  cytoscript.sh  moveUnfinished.sh  openInCyto.sh
cmake/: FindGLPK.cmake
distribution/: distroscript.sh  onNode.sh
docs/: dissertation.aux  dissertation.bbl  dissertation.bib  dissertation.blg  dissertation.tex  progressreport1.tex  reportoutline.tex
initial_tests/: a.out  boostAdjSpeed  boostAdjmat.cpp  boostInoutTest.cpp  boostSpeedtest  boost_distance.cpp  boost_merre  boostroute.cpp  boosttry  distances  graph_class.cpp  graph_stat  graphstat.cpp  ownClassInoutTest.cpp  ownSpeedtest  sulistat  tmp.jnk  verybasic_boost.cpp
movAvg/: CMakeLists.txt  movAvg.cpp
partRatio/: CMakeLists.txt  main.cpp
presentation/: presentation.tex
reading_in/: .main.cpp.swp  .mrp.txt.swp  .reaction_read.cpp.swp  CMakeLists.txt  cell.cpp  cell.h  cytoscript.sh  frankenstyle.xml  main.cpp  main.cpp~  newRead  newcompounds.txt  newreacRead  newreactions.txt  newsortedcompounds.txt  reacRead  reaction.cpp  reaction.cpp~  reaction.h  reaction.h~  reaction_read.cpp  reaction_readnew.cpp  substrate.cpp
scripts/: similarityCalc.sh
simChecker/: CMakeLists.txt  IPRplotter.gnup  lineplotter.gnup  lineplotter.plot  main.cpp  paperplotter.gnup  plotter.gnup  similarityCalc.sh
